--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       </div>
     </nav>
-    <div class="container p-5">
+    <div id="product-list-container" class="container p-5">
         <!--En este contenedor se crea la lista de productos-->
     </div>
     <footer class="text-muted bg-light">
