Agrego etiqueta formulario al login

--- a/login.html
+++ b/login.html
@@ -13,18 +13,20 @@
 			<img src="img/login.png" class="img" alt="Jovenes a Programar">
 
 			<div class="login-form">
-				<div class="control-group">
-				<input type="text" class="login-field" placeholder="Usuario" id="usuario">
-				<label class="login-field-icon fui-user" for="usuario"></label>
-				</div>
-
-				<div class="control-group">
-				<input type="text" class="login-field" placeholder="Contraseña" id="contraseña">
-				<label class="login-field-icon fui-lock" for="contraseña"></label>
-				</div>
+				<form id="formulario">
+					<div class="control-group">
+						<input type="text" class="login-field" placeholder="Usuario" id="usuario">
+						<label class="login-field-icon fui-user" for="usuario"></label>
+						</div>
+		
+						<div class="control-group">
+						<input type="password" class="login-field" placeholder="Contraseña" id="contraseña">
+						<label class="login-field-icon fui-lock" for="contraseña"></label>
+						</div>
+				</form>
 
 				<input type="button" class="btn btn-primary btn-large btn-block" id="boton-ingresar" value="Ingresar">
-				<!--Link a futura funcionalidad de la pagina del LOGIn-->
+				<!--Link a futura funcionalidad de la pagina del LogIn-->
 				<a class="login-link" href="#">Recuperar contraseña</a>
 			</div>
 		</div>
