--- a/categories.html
+++ b/categories.html
@@ -22,6 +22,12 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <div class="dropdown">
+          <button  id="info_usuario" class="btn btn-secondary dropdown-toggle" type="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          </button>
+          <div class="dropdown-menu" >
+            <a class="dropdown-item" href="login.html" onclick="signOut()">Salir</a>
+          </div>
       </div>
     </nav>
     <main role="main" class="pb-5">
