--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <!--Info del Usuario (Dropdown obtenido de boostrap)-->
+        <div class="dropdown">
+          <button  id="info_usuario" class="btn btn-secondary dropdown-toggle" type="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          </button>
+          <div class="dropdown-menu" >
+            <a class="dropdown-item" href="login.html" onclick="signOut()">Salir</a>
+          </div>
+        </div>
       </div>
     </nav>
     <main role="main">
