--- a/products.html
+++ b/products.html
@@ -21,11 +21,67 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <div class="dropdown">
+          <button  id="info_usuario" class="btn btn-secondary dropdown-toggle" type="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          </button>
+          <div class="dropdown-menu" >
+            <a class="dropdown-item" href="login.html" onclick="signOut()">Salir</a>
+          </div>
       </div>
     </nav>
-    <div id="product-list-container" class="container p-5">
-        <!--En este contenedor se crea la lista de productos-->
-    </div>
+
+    <main role="main" class="pb-5">
+      <div class="text-center p-4">
+          <h2>Productos</h2>
+      </div>
+      <div class="container">
+          <div class="row">
+              <div class="col text-right">
+                <!--Botones para ordenar-->
+                  <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+                      <label class="btn btn-light active" id="sortAscPrice" >
+                          <input type="radio" name="options" autocomplete="off" checked>Mayor precio
+                      </label>
+                      <label class="btn btn-light" id="sortDescPrice" >
+                          <input type="radio" name="options" autocomplete="off">Menor precio
+                      </label>
+                      <label class="btn btn-light" id="sortByRelevance" >
+                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Más relevante
+                      </label>
+                  </div>
+              </div>
+          </div>
+          <div class="row justify-content-end">
+            <div class="col-md-6"></div>
+              <div class="col-md-6 col-sm-12 mb-1 container">
+                <div class="row container p-0 m-0">
+                  <div class="col">
+                    <p class="font-weight-normal text-right my-2">Precio: </p>
+                  </div>
+                  <div class="col">
+                    <input class="form-control" type="number" placeholder="min." id="priceFilterCountMin">
+                  </div>
+                  <div class="col">
+                    <input class="form-control" type="number" placeholder="máx." id="priceFilterCountMax">
+                  </div>
+                  <div class="col-3 p-0">
+                    <!--Filtros-->
+                    <div class="btn-group" role="group">
+                      <button class="btn btn-light btn-block" id="priceFilterCount">Filtrar</button>
+                      <button class="btn btn-link btn-sm" id="clearPriceFilter">Limpiar</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div id="product-list-container" class="list-group">
+              <!--En este contenedor se crea la lista de productos-->
+          </div>
+          </div>
+      </div>
+  </main>
+    
     <footer class="text-muted bg-light">
       <div class="container">
         <p class="float-right">
