--- a/products.html
+++ b/products.html
@@ -21,12 +21,17 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-        <div class="dropdown">
-          <button  id="info_usuario" class="btn btn-secondary dropdown-toggle" type="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          </button>
-          <div class="dropdown-menu" >
-            <a class="dropdown-item" href="login.html" onclick="signOut()">Salir</a>
-          </div>
+        
+        <!--Searchbar-->
+        <div id="searchbar">
+            <!--Acá voy a crear el searchbar-->
+        </div>
+
+        <!--Info del Usuario (Dropdown obtenido de boostrap)-->
+       <div id="menu_usuario">
+          <!--Acá voy a crear el botón para el nombre de usuario-->
+       </div>
+
       </div>
     </nav>
 
