--- a/sell.html
+++ b/sell.html
@@ -31,19 +31,24 @@
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
-            <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
-            <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
-            <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-            <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-            <div class="dropdown">
-              <button  id="info_usuario" class="btn btn-secondary dropdown-toggle" type="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              </button>
-              <div class="dropdown-menu" >
-                <a class="dropdown-item" href="login.html" onclick="signOut()">Salir</a>
-              </div>
+      <div class="container d-flex flex-column flex-md-row justify-content-between">
+        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
+        <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
+        <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
+        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        
+        <!--Searchbar-->
+        <div id="searchbar">
+            <!--Acá voy a crear el searchbar-->
         </div>
+
+        <!--Info del Usuario (Dropdown obtenido de boostrap)-->
+       <div id="menu_usuario">
+          <!--Acá voy a crear el botón para el nombre de usuario-->
+       </div>
+
+      </div>
     </nav>
       <div class="container">
         <div class="text-center p-4">
