--- a/product-info.html
+++ b/product-info.html
@@ -72,7 +72,22 @@
             </a>
           </div>
         </div>
+      </div>
+      <div class="container  containerProduct">
+        <div class="container">
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+        </div>
+        <hr>
+        <div>
+          <p>Comentario</p>
+        </div>
+      </div>
     </div>
+    
 </main>
   
   <footer class="text-muted bg-light">
