--- a/product-info.html
+++ b/product-info.html
@@ -48,12 +48,12 @@
     <div id='crear-comentario' class="container containerProduct">
       <form id="caja-comentarios">
         <div class="form-group">
-          <div>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star"></span>
-            <span class="fa fa-star"></span>
+          <div id="estrellas">
+            <span class="fa fa-star checked" valor="1"></span>
+            <span class="fa fa-star checked" valor="2"></span>
+            <span class="fa fa-star checked" valor="3"></span>
+            <span class="fa fa-star" valor="4"></span>
+            <span class="fa fa-star" valor="5"></span>
           </div>
           <textarea class="form-control" id="texto-comentario" rows="3"></textarea>
         </div>
