Cambios para agregar comentario

--- a/product-info.html
+++ b/product-info.html
@@ -63,7 +63,7 @@
         <div class="container">
           <div class="row">
             <div class="col text-center">
-              <button type="submit" class="btn btn-secondary"  id="comentar" onclick="recibirComentario()">Comentar!</button>
+              <input type="button" class="btn btn-secondary" id="comentar" value="Comentar!">
             </div>
           </div>
         </div>
@@ -73,6 +73,12 @@
     <!--Acá se mustran los comentarios-->
     <div id='comentario'>
     </div>
+
+    
+    <!--Acá se mustran los comentarios recientes-->
+    <div id='comentario-reciente'>
+    </div>
+
 
     </div>
 
