--- a/product-info.html
+++ b/product-info.html
@@ -83,6 +83,10 @@
     <div id='comentario-reciente'>
     </div>
 
+    <!--Acá se mustran los productos relacionados-->
+    <div id='productos-relacionados'>
+    </div>
+
 
     </div>
 
