--- a/product-info.html
+++ b/product-info.html
@@ -84,7 +84,7 @@
     </div>
 
     <!--Acá se mustran los productos relacionados-->
-    <div id='productos-relacionados'>
+    <div id='productos-relacionados' class="container containerProduct">
     </div>
 
 
