--- a/product-info.html
+++ b/product-info.html
@@ -44,12 +44,14 @@
   <!--Este nuevo main es donde se va a mostrar la info del producto-->
   <main role="main" class="pb-5">
 
+
     <!--Acá se guarda la info del producto-->
     <div id='info-producto'>
     </div>
 
+
     <!--Acá se crean los comentarios-->
-    <div id='crear-comentario' class="container containerProduct">
+    <div id='crear-comentario' class='container containerProduct'>
       <form id="caja-comentarios">
         <div class="form-group">
           <div id="estrellas">
@@ -74,6 +76,7 @@
       </form>
     </div>
 
+
     <!--Acá se mustran los comentarios-->
     <div id='comentario'>
     </div>
@@ -83,9 +86,24 @@
     <div id='comentario-reciente'>
     </div>
 
+    <br>
+    <br>
+    <hr>
+
     <!--Acá se mustran los productos relacionados-->
-    <div id='productos-relacionados' class="container containerProduct">
+      <div>
+      <div class="text-center p-4">
+        <p class="lead">También te puede interesar...</p>
+      </div>
+      <div class="album">
+      <div class="container">
+        <div class="row"    style=" display: flex ;justify-content: space-around;" id="productos-relacionados">
+        </div>
+      </div>
     </div>
+    </div>
+    
+
 
 
     </div>
