Entrega 5, casi todo

--- a/cart.html
+++ b/cart.html
@@ -60,7 +60,31 @@
   </nav>
   
   <!--Acá se agrega el carrito-->
+  <div class="container">
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Subtotal</th>
+          </tr>
+        </thead>
+        <tbody id="carrito">
+          <!--Acá se cargan los productos-->
+        </tbody>
+        </table>
+        <div>
+          <p id=totalCarrito></p>
+        </div>
+</div>
 
+
+<!--Acá agrego el form para la info de envío-->
+<div class="container">
+
+</div>
 
   <div id="spinner-wrapper">
     <div class="lds-ring">
