--- a/products.html
+++ b/products.html
@@ -83,9 +83,11 @@
                 </div>
               </div>
           </div>
-          <div class="row">
-            <div id="product-list-container" class="list-group">
-              <!--En este contenedor se crea la lista de productos-->
+          <div class="album py-5 bg-light">
+            <div class="container">
+              <div  id="product-list-container" class="row">
+                  <!--En este contenedor se crea la lista de productos-->
+            </div>
           </div>
           </div>
       </div>
