--- a/my-profile.html
+++ b/my-profile.html
@@ -63,7 +63,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
-        <img src="img/usr.png" class="img-fluid rounded float-left" style="margin: 50px">
+        <img id="foto-exhibida" src="img/usr.png" class="img-fluid rounded float-left" style="margin: 50px">
+        <input type="file" id="imagen-usuario" onchange="previewFile();">
     </div>
     <div id="info-usuario" class="col" style="margin: 50px;">
       <!--Aca se carga la info obtenida de localStorage-->
@@ -72,7 +73,7 @@
 </div>
 
 <!--Formulario para ingreso de los datos-->
-<div class="container">
+<div class="container" style="margin: 50px;">
   <form class="needs-validation" novalidate>
     <div class="form-row">
       <!--Nombre-->
