--- a/my-profile.html
+++ b/my-profile.html
@@ -63,7 +63,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-        <img id="foto-exhibida" src="img/usr.png" class="img-fluid rounded float-left" style="margin: 50px">
+        <img id="foto-exhibida" src="img/usr.png" class="img-fluid rounded float-left" style="margin: 50px; max-height: 200px;">
         <input type="file" id="imagen-usuario" onchange="previewFile();">
     </div>
     <div id="info-usuario" class="col" style="margin: 50px;">
