--- a/cart.html
+++ b/cart.html
@@ -100,6 +100,9 @@
     </div> -->
   </div>
 
+  <br>
+  <hr>
+  <br>
 
   <!--Acá agrego el form para la info de envío-->
   <div class="container">
@@ -175,11 +178,12 @@
 
       <fieldset class="form-group">
         <legend class="col-form-label col-sm-2 pt-0">Método de pago:</legend>
+        <h6 id="tipo" style="color: green;"></h6>
         <button type="button" class="btn btn-outline-secondary rounded pill btn-sm" data-target="#modal-metodo-pago"
           data-toggle="modal">Seleccionar</button>
       </fieldset>
 
-      <button type="submit" class="btn btn-primary rounded-pill" >Confirmar</button>
+      <button type="submit" class="btn btn-primary rounded-pill" onclick="mensajeCompraExitosa();">Confirmar</button>
     </form>
 
 
