--- a/cart.html
+++ b/cart.html
@@ -188,7 +188,7 @@
         <!--Datos requeridos según el metodo de pago-->
       </div>
 
-      <button type="submit" class="btn btn-primary rounded-pill" onclick="mensajeCompraExitosa();">Confirmar</button>
+      <button id="botonComprar" type="submit" class="btn btn-primary rounded-pill" onclick="mensajeCompraExitosa();">Confirmar</button>
     </form>
 
 
